<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/fragment_default_padding_horizontal">

    <FrameLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_default"
        app:layout_constraintTop_toTopOf="parent" />

    <lv.zesloka.skani.ui.widgets.text.TextInputField
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:fieldDescription="@string/input_description_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top" />

    <lv.zesloka.skani.ui.widgets.text.TextInputField
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:fieldDescription="@string/input_description_password"
        app:inputType="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <LinearLayout
        android:id="@+id/hep_text_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/action_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password">

        <TextView
            android:id="@+id/txt_not_registered"
            style="@style/TextRegularMid"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login_not_registered"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/action_register"
            style="@style/TextRegularMidClickable"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/login_register_here"
            android:textAlignment="center" />
    </LinearLayout>


    <lv.zesloka.skani.ui.widgets.text.ActionButton
        android:id="@+id/action_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:title="Go" />


</androidx.constraintlayout.widget.ConstraintLayout>